--- a/Bazis MADI/Base.lproj/Main.storyboard
+++ b/Bazis MADI/Base.lproj/Main.storyboard
@@ -803,6 +803,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="ColorBlue"/>
+                        <color key="selectedImageTintColor" name="ColorBlue"/>
                     </tabBar>
                     <connections>
                         <segue destination="Rp6-GC-MaS" kind="relationship" relationship="viewControllers" id="Btg-2a-r7b"/>
